--- a/Hemsida/index.html
+++ b/Hemsida/index.html
@@ -6,24 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
 
+
+    <link href="https://fonts.googleapis.com/css2?family=Reggae+One&display=swap" rel="stylesheet">  
 <link rel="stylesheet" href="styles/reset.css">
 <link rel="stylesheet" href="styles/style.css">
 
 </head>
 <body>
+    <section>
     <nav>   
-         <div class="logo">My Portfolio Website</div>
+         <div class="logo"></div>
+         <a href="#" class="logo">My Portfolio Website</a>
 
          <ul class="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
           <li><a href="contact.html" target="_blank">Contact me</a></li>
+          
          </ul>
         </nav>
+    </section>
    
 
-    <img src="Images/chris-nguyen-aTX_bRaOZnA-unsplash.jpg" alt="">
-    <img src="Images/goh-rhy-yan-f_SDCASisgs-unsplash.jpg" alt="">
-    <img src="Images/joshua-koblin-eqW1MPinEV4-unsplash.jpg" alt="">
-    <img src="Images/tyler-clemmensen-wLpTPp2dzsY-unsplash.jpg" alt="">
+    <img class="img1" src="Images/chris-nguyen-aTX_bRaOZnA-unsplash.jpg" alt="">
+    <img class="img1" src="Images/goh-rhy-yan-f_SDCASisgs-unsplash.jpg" alt="">
+    <img class="img1" src="Images/joshua-koblin-eqW1MPinEV4-unsplash.jpg" alt="">
+    <img class="img1" src="Images/tyler-clemmensen-wLpTPp2dzsY-unsplash.jpg" alt="">
 
 
 
